--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,18 +4,14 @@
     "asset-download.done": "Done",
     "asset-download.error": "Error",
     "asset-download.add": "Add",
-
     "startup.initLibSrcRootDialogTitle": "Choose the source root path.",
     "startup.initLibDstRootDialogTitle": "Choose the library root path.",
     "startup.btnOpenLib": "Open Library",
     "startup.btnInitLib": "Initialize Library",
     "startup.btnRecent": "Open Recent",
-
     "asset-mani.rename": "New name",
-
     "browser.folderTreeSectionTitle": "Folder Tree",
     "browser.tagCollSectionTitle": "Tag Collections",
-
     "ctxMenu.del": "Delete",
     "ctxMenu.rename": "Rename",
     "ctxMenu.moveTo": "Move To",
@@ -24,7 +20,6 @@
     "ctxMenu.remTag": "Remove Tag",
     "ctxMenu.noTagFallback": "No tag matches query.",
     "ctxMenu.quickRef": "Quick Ref",
-
     "detail.noAssetSelect": "No asset selected",
     "detail.multiAssetsSelect": "Multiple assets selected",
     "detail.filePropsSectionTitle": "File Properties",
@@ -36,21 +31,25 @@
     "detail.id": "Id",
     "detail.checksums": "Checksums",
     "detail.checksumsCompute": "Compute",
-    
     "quickRefCtxMenu.close": "Close",
-
     "tagName.fallback": "Unnamed",
-
     "tagsContainer.noAvailable": "No tags available.",
     "tagsContainer.add": "Add Tag",
     "tagsContainer.none": "None",
-
     "tagsMgr.title": "Tags Management",
     "tagsMgr.add": "Add Tag",
     "tagsMgr.colName": "Name",
     "tagsMgr.colColor": "Color",
     "tagsMgr.colActions": "Actions",
-
     "app.libTitle": "Library",
-    "app.assetInfoTitle": "Asset Info"
+    "app.assetInfoTitle": "Asset Info",
+    "settings.general": "General",
+    "settings.general.theme": "Theme",
+    "settings.general.theme.light": "Light",
+    "settings.general.theme.dark": "Dark",
+    "settings.general.lng": "Language",
+    "settings.general.lng.en": "English",
+    "settings.general.lng.zh": "简体中文",
+    "settings.experimental": "Experimental",
+    "settings.experimental.aigcDetect": "AIGC Detection[WIP]"
 }
