--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -1,4 +1,5 @@
 {
+    "asset-download.title": "从网页 URL 下载",
     "asset-download.sendingGet": "发送 GET 请求",
     "asset-download.start": "开始",
     "asset-download.done": "完成",
@@ -10,6 +11,7 @@
     "startup.btnInitLib": "初始化库",
     "startup.btnRecent": "最近打开",
     "asset-mani.rename": "新名字",
+    "asset-mani.importDialogTitle": "选择你需要导入的资产",
     "browser.folderTreeSectionTitle": "目录树",
     "browser.tagCollSectionTitle": "标签合集",
     "ctxMenu.del": "删除",
@@ -43,6 +45,7 @@
     "tagsMgr.colActions": "操作",
     "app.libTitle": "库",
     "app.assetInfoTitle": "资产信息",
+    "settings.title": "设置",
     "settings.general": "通用",
     "settings.general.theme": "主题",
     "settings.general.theme.light": "亮色",
