feat: Library name.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -55,7 +55,8 @@
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
     "settings.library": "Library",
-    "settings.library.export": "Export Library",
+    "settings.library.export": "Export",
+    "settings.library.name": "Name",
     "settings.keyMapping": "Key Mapping",
     "settings.keyMapping.listening": "Listening",
     "settings.keyMapping.save": "Save",
