--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -56,6 +56,7 @@
     "settings.general.lng.zh": "简体中文",
     "settings.library": "库",
     "settings.library.export": "导出库",
+    "settings.library.rename": "名字",
     "settings.keyMapping": "键位",
     "settings.keyMapping.listening": "正在监听",
     "settings.keyMapping.save": "保存",
