feat: Asset statistics.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,6 +57,7 @@
     "settings.library": "Library",
     "settings.library.export": "Export",
     "settings.library.name": "Name",
+    "settings.library.statistics": "Statistics",
     "settings.keyMapping": "Key Mapping",
     "settings.keyMapping.listening": "Listening",
     "settings.keyMapping.save": "Save",
@@ -65,6 +66,13 @@
     "settings.keyMapping.newFolder": "New Folder",
     "settings.experimental": "Experimental",
     "settings.experimental.aigcDetect": "AIGC Detection[WIP]",
+    "stat.title": "Statistics",
+    "stat.props.title": "Properties",
+    "stat.props.value": "Value",
+    "stat.props.totalAssets": "Total Assets",
+    "stat.ext.title": "Asset Extensions",
+    "stat.ext.cnt": "Count",
+    "stat.computing": "Computing...",
     "toast.err.title": "Error",
     "toast.success.title": "Success",
     "toast.invalidKeyComb.title": "Invalid key combination.",
