--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -57,6 +57,7 @@
     "settings.library": "库",
     "settings.library.export": "导出库",
     "settings.library.rename": "名字",
+    "settings.library.statistics": "统计数据",
     "settings.keyMapping": "键位",
     "settings.keyMapping.listening": "正在监听",
     "settings.keyMapping.save": "保存",
@@ -65,6 +66,13 @@
     "settings.keyMapping.newFolder": "新建文件夹",
     "settings.experimental": "实验性",
     "settings.experimental.aigcDetect": "AI生成内容检测[WIP]",
+    "stat.title": "统计数据",
+    "stat.props.title": "属性",
+    "stat.props.value": "值",
+    "stat.props.totalAssets": "资产总数",
+    "stat.ext.title": "资产后缀名",
+    "stat.ext.cnt": "数量",
+    "stat.computing": "正在计算...",
     "toast.err.title": "错误",
     "toast.success.title": "成功",
     "toast.invalidKeyComb.title": "无效的按键组合",
