feat: Recycle bin.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,8 +23,12 @@
     "ctxMenu.remTag": "Remove Tag",
     "ctxMenu.noTagFallback": "No tag matches query.",
     "ctxMenu.quickRef": "Quick Ref",
+    "ctxMenu.recover": "Recover",
+    "ctxMenu.delPerm": "Permanently Delete",
+    "ctxMenu.delPerm.confirm": "Are you sure?",
     "detail.noAssetSelect": "No asset selected",
     "detail.multiAssetsSelect": "Multiple assets selected",
+    "detail.folderSelect": "Folder selected",
     "detail.filePropsSectionTitle": "File Properties",
     "detail.fileName": "File Name",
     "detail.tags": "Tags",
@@ -46,6 +50,7 @@
     "tagsMgr.colActions": "Actions",
     "app.libTitle": "Library",
     "app.assetInfoTitle": "Asset Info",
+    "recycleBin.title": "Recycle Bin [Unstable]",
     "settings.title": "Settings",
     "settings.general": "General",
     "settings.general.theme": "Theme",
