--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -23,6 +23,7 @@
     "ctxMenu.remTag": "移除标签",
     "ctxMenu.noTagFallback": "没有符合的标签",
     "ctxMenu.quickRef": "快速参考",
+    "ctxMenu.recover": "恢复",
     "detail.noAssetSelect": "没有选中的资产",
     "detail.multiAssetsSelect": "多个被选中的资产",
     "detail.filePropsSectionTitle": "文件属性",
@@ -46,6 +47,7 @@
     "tagsMgr.colActions": "操作",
     "app.libTitle": "库",
     "app.assetInfoTitle": "资产信息",
+    "recycleBin.title": "回收站[不稳定]",
     "settings.title": "设置",
     "settings.general": "通用",
     "settings.general.theme": "主题",
