--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -63,6 +63,7 @@
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
     "settings.library": "Library",
+    "settings.library.void": "No library loaded.",
     "settings.library.export": "Export",
     "settings.library.name": "Name",
     "settings.library.statistics": "Statistics",
