chore: Add localization sync script.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,93 +1,93 @@
 {
-    "asset-download.title": "Download asset from URLs",
-    "asset-download.sendingGet": "Sending GET",
-    "asset-download.start": "Start",
+    "app.assetInfoTitle": "Asset Info",
+    "app.libTitle": "Library",
+    "asset-download.add": "Add",
     "asset-download.done": "Done",
     "asset-download.error": "Error",
-    "asset-download.add": "Add",
-    "startup.initLibSrcRootDialogTitle": "Choose the source root path.",
-    "startup.initLibDstRootDialogTitle": "Choose the library root path.",
-    "startup.btnOpenLib": "Open Library",
-    "startup.btnInitLib": "Initialize Library",
-    "startup.btnRecent": "Open Recent",
-    "startup.noRecent": "No recent libraries.",
-    "update.title": "Update Available",
-    "update.body": "You are now using {{current}}, while the latest is {{latest}}",
-    "asset-mani.rename": "New name",
+    "asset-download.sendingGet": "Sending GET",
+    "asset-download.start": "Start",
+    "asset-download.title": "Download asset from URLs",
     "asset-mani.delPerm.confirm": "Are you sure?",
     "asset-mani.importDialogTitle": "Select assets you want to import.",
+    "asset-mani.rename": "New name",
     "browser.folderTreeSectionTitle": "Folder Tree",
     "browser.tagCollSectionTitle": "Tag Collections",
-    "ctxMenu.del": "Delete",
-    "ctxMenu.rename": "Rename",
-    "ctxMenu.moveTo": "Move To",
-    "ctxMenu.noFolderFallback": "No folder matches query.",
     "ctxMenu.addTag": "Add Tag",
-    "ctxMenu.remTag": "Remove Tag",
-    "ctxMenu.noTagFallback": "No tag matches query.",
-    "ctxMenu.quickRef": "Quick Ref",
-    "ctxMenu.open": "Open",
-    "ctxMenu.recover": "Recover",
+    "ctxMenu.del": "Delete",
     "ctxMenu.delPerm": "Permanently Delete",
     "ctxMenu.delPerm.confirm": "Are you sure?",
-    "detail.noAssetSelect": "No asset selected",
-    "detail.multiAssetsSelect": "Multiple assets selected",
-    "detail.folderSelect": "Folder selected",
-    "detail.filePropsSectionTitle": "File Properties",
-    "detail.fileName": "File Name",
-    "detail.tags": "Tags",
-    "detail.size": "Size",
-    "detail.ext": "Extension",
+    "ctxMenu.moveTo": "Move To",
+    "ctxMenu.noFolderFallback": "No folder matches query.",
+    "ctxMenu.noTagFallback": "No tag matches query.",
+    "ctxMenu.open": "Open",
+    "ctxMenu.quickRef": "Quick Ref",
+    "ctxMenu.recover": "Recover",
+    "ctxMenu.remTag": "Remove Tag",
+    "ctxMenu.rename": "Rename",
     "detail.created": "Created At",
-    "detail.modify": "Last Modified",
+    "detail.ext": "Extension",
+    "detail.fileName": "File Name",
+    "detail.filePropsSectionTitle": "File Properties",
+    "detail.folderSelect": "Folder selected",
     "detail.id": "Id",
+    "detail.modify": "Last Modified",
+    "detail.multiAssetsSelect": "Multiple assets selected",
+    "detail.noAssetSelect": "No asset selected",
+    "detail.size": "Size",
     "detail.src": "Source",
+    "detail.tags": "Tags",
     "quickRefCtxMenu.close": "Close",
-    "tagName.fallback": "Unnamed",
-    "tagsContainer.noAvailable": "No tags available.",
-    "tagsContainer.add": "Add Tag",
-    "tagsContainer.none": "None",
-    "tagsMgr.title": "Tags Management",
-    "tagsMgr.add": "Add Tag",
-    "tagsMgr.colName": "Name",
-    "tagsMgr.colColor": "Color",
-    "tagsMgr.colActions": "Actions",
-    "app.libTitle": "Library",
-    "app.assetInfoTitle": "Asset Info",
     "recycleBin.title": "Recycle Bin [Unstable]",
-    "settings.title": "Settings",
+    "settings.experimental": "Experimental",
+    "settings.experimental.aigcDetect": "AIGC Detection",
     "settings.general": "General",
-    "settings.general.theme": "Theme",
-    "settings.general.theme.light": "Light",
-    "settings.general.theme.dark": "Dark",
     "settings.general.lng": "Language",
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
+    "settings.general.theme": "Theme",
+    "settings.general.theme.dark": "Dark",
+    "settings.general.theme.light": "Light",
+    "settings.keyMapping": "Key Mapping",
+    "settings.keyMapping.delete": "Delete",
+    "settings.keyMapping.listening": "Listening",
+    "settings.keyMapping.newFolder": "New Folder",
+    "settings.keyMapping.rename": "Rename",
+    "settings.keyMapping.save": "Save",
     "settings.library": "Library",
-    "settings.library.void": "No library loaded.",
     "settings.library.export": "Export",
     "settings.library.name": "Name",
     "settings.library.statistics": "Statistics",
-    "settings.keyMapping": "Key Mapping",
-    "settings.keyMapping.listening": "Listening",
-    "settings.keyMapping.save": "Save",
-    "settings.keyMapping.rename": "Rename",
-    "settings.keyMapping.delete": "Delete",
-    "settings.keyMapping.newFolder": "New Folder",
-    "settings.experimental": "Experimental",
-    "settings.experimental.aigcDetect": "AIGC Detection[WIP]",
-    "stat.title": "Statistics",
-    "stat.props.title": "Properties",
-    "stat.props.value": "Value",
-    "stat.props.totalAssets": "Total Assets",
-    "stat.ext.title": "Asset Extensions",
-    "stat.ext.cnt": "Count",
+    "settings.library.void": "No library loaded.",
+    "settings.title": "Settings",
+    "startup.btnInitLib": "Initialize Library",
+    "startup.btnOpenLib": "Open Library",
+    "startup.btnRecent": "Open Recent",
+    "startup.initLibDstRootDialogTitle": "Choose the library root path.",
+    "startup.initLibSrcRootDialogTitle": "Choose the source root path.",
+    "startup.noRecent": "No recent libraries.",
     "stat.computing": "Computing...",
+    "stat.ext.cnt": "Count",
+    "stat.ext.title": "Asset Extensions",
+    "stat.props.title": "Properties",
+    "stat.props.totalAssets": "Total Assets",
+    "stat.props.value": "Value",
+    "stat.title": "Statistics",
+    "tagName.fallback": "Unnamed",
+    "tagsContainer.add": "Add Tag",
+    "tagsContainer.noAvailable": "No tags available.",
+    "tagsContainer.none": "None",
+    "tagsMgr.add": "Add Tag",
+    "tagsMgr.colActions": "Actions",
+    "tagsMgr.colColor": "Color",
+    "tagsMgr.colName": "Name",
+    "tagsMgr.title": "Tags Management",
+    "toast.assetDuplication.title": "Duplicate images detected",
     "toast.err.title": "Error",
-    "toast.success.title": "Success",
-    "toast.invalidKeyComb.title": "Invalid key combination.",
-    "toast.invalidKeyComb.body": "The combination should contain at least one key other than control, alt or shift.",
-    "toast.save.success": "Saved library.",
     "toast.export.success": "Exported library.",
-    "toast.assetDuplication.title": "Duplicate images detected"
+    "toast.invalidKeyComb.body": "The combination should contain at least one key other than control, alt or shift.",
+    "toast.invalidKeyComb.title": "Invalid key combination.",
+    "toast.save.success": "Saved library.",
+    "toast.success.title": "Success",
+    "update.body": "You are now using {{current}}, while the latest is {{latest}}",
+    "update.title": "Update Available"
 }
