--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -1,85 +1,93 @@
 {
-    "asset-download.title": "从网页 URL 下载",
-    "asset-download.sendingGet": "发送 GET 请求",
-    "asset-download.start": "开始",
+    "app.assetInfoTitle": "资产信息",
+    "app.libTitle": "库",
+    "asset-download.add": "添加",
     "asset-download.done": "完成",
     "asset-download.error": "错误",
-    "asset-download.add": "添加",
-    "startup.initLibSrcRootDialogTitle": "选择源目录",
-    "startup.initLibDstRootDialogTitle": "选择存储库目录",
-    "startup.btnOpenLib": "打开库",
-    "startup.btnInitLib": "初始化库",
-    "startup.btnRecent": "最近打开",
-    "startup.noRecent": "没有最近打开的库",
-    "asset-mani.rename": "新名字",
+    "asset-download.sendingGet": "发送 GET 请求",
+    "asset-download.start": "开始",
+    "asset-download.title": "从网页 URL 下载",
+    "asset-mani.delPerm.confirm": "你确定吗？",
     "asset-mani.importDialogTitle": "选择你需要导入的资产",
+    "asset-mani.rename": "新名字",
     "browser.folderTreeSectionTitle": "目录树",
     "browser.tagCollSectionTitle": "标签合集",
+    "ctxMenu.addTag": "添加标签",
     "ctxMenu.del": "删除",
-    "ctxMenu.rename": "重命名",
+    "ctxMenu.delPerm": "永久删除",
+    "ctxMenu.delPerm.confirm": "你确定吗？",
     "ctxMenu.moveTo": "移动至",
     "ctxMenu.noFolderFallback": "没有符合的文件夹",
-    "ctxMenu.addTag": "添加标签",
-    "ctxMenu.remTag": "移除标签",
     "ctxMenu.noTagFallback": "没有符合的标签",
+    "ctxMenu.open": "Open",
     "ctxMenu.quickRef": "快速参考",
     "ctxMenu.recover": "恢复",
-    "detail.noAssetSelect": "没有选中的资产",
-    "detail.multiAssetsSelect": "多个被选中的资产",
-    "detail.filePropsSectionTitle": "文件属性",
-    "detail.fileName": "文件名",
-    "detail.tags": "标签",
-    "detail.size": "大小",
-    "detail.ext": "扩展名",
+    "ctxMenu.remTag": "移除标签",
+    "ctxMenu.rename": "重命名",
     "detail.created": "创建于",
-    "detail.modify": "上一次修改于",
+    "detail.ext": "扩展名",
+    "detail.fileName": "文件名",
+    "detail.filePropsSectionTitle": "文件属性",
+    "detail.folderSelect": "选中文件夹",
     "detail.id": "唯一标识符",
-    "detail.source": "来源",
+    "detail.modify": "上一次修改于",
+    "detail.multiAssetsSelect": "多个被选中的资产",
+    "detail.noAssetSelect": "没有选中的资产",
+    "detail.size": "大小",
+    "detail.src": "源",
+    "detail.tags": "标签",
     "quickRefCtxMenu.close": "关闭",
-    "tagName.fallback": "未命名",
-    "tagsContainer.noAvailable": "没有可用的标签",
-    "tagsContainer.add": "添加标签",
-    "tagsContainer.none": "空",
-    "tagsMgr.title": "标签管理",
-    "tagsMgr.add": "添加标签",
-    "tagsMgr.colName": "名字",
-    "tagsMgr.colColor": "颜色",
-    "tagsMgr.colActions": "操作",
-    "app.libTitle": "库",
-    "app.assetInfoTitle": "资产信息",
-    "recycleBin.title": "回收站[不稳定]",
-    "settings.title": "设置",
+    "recycleBin.title": "回收站",
+    "settings.experimental": "实验性",
+    "settings.experimental.aigcDetect": "AI生成内容检测",
     "settings.general": "通用",
-    "settings.general.theme": "主题",
-    "settings.general.theme.light": "亮色",
-    "settings.general.theme.dark": "暗色",
     "settings.general.lng": "语言",
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
+    "settings.general.theme": "主题",
+    "settings.general.theme.dark": "暗色",
+    "settings.general.theme.light": "亮色",
+    "settings.keyMapping": "键位",
+    "settings.keyMapping.delete": "删除",
+    "settings.keyMapping.listening": "正在监听",
+    "settings.keyMapping.newFolder": "新建文件夹",
+    "settings.keyMapping.rename": "重命名",
+    "settings.keyMapping.save": "保存",
     "settings.library": "库",
     "settings.library.export": "导出库",
-    "settings.library.rename": "名字",
+    "settings.library.name": "名字",
     "settings.library.statistics": "统计数据",
-    "settings.keyMapping": "键位",
-    "settings.keyMapping.listening": "正在监听",
-    "settings.keyMapping.save": "保存",
-    "settings.keyMapping.rename": "重命名",
-    "settings.keyMapping.delete": "删除",
-    "settings.keyMapping.newFolder": "新建文件夹",
-    "settings.experimental": "实验性",
-    "settings.experimental.aigcDetect": "AI生成内容检测[WIP]",
-    "stat.title": "统计数据",
-    "stat.props.title": "属性",
-    "stat.props.value": "值",
-    "stat.props.totalAssets": "资产总数",
-    "stat.ext.title": "资产后缀名",
-    "stat.ext.cnt": "数量",
+    "settings.library.void": "没有被加载的库",
+    "settings.title": "设置",
+    "startup.btnInitLib": "初始化库",
+    "startup.btnOpenLib": "打开库",
+    "startup.btnRecent": "最近打开",
+    "startup.initLibDstRootDialogTitle": "选择存储库目录",
+    "startup.initLibSrcRootDialogTitle": "选择源目录",
+    "startup.noRecent": "没有最近打开的库",
     "stat.computing": "正在计算...",
+    "stat.ext.cnt": "数量",
+    "stat.ext.title": "资产后缀名",
+    "stat.props.title": "属性",
+    "stat.props.totalAssets": "资产总数",
+    "stat.props.value": "值",
+    "stat.title": "统计数据",
+    "tagName.fallback": "未命名",
+    "tagsContainer.add": "添加标签",
+    "tagsContainer.noAvailable": "没有可用的标签",
+    "tagsContainer.none": "空",
+    "tagsMgr.add": "添加标签",
+    "tagsMgr.colActions": "操作",
+    "tagsMgr.colColor": "颜色",
+    "tagsMgr.colName": "名字",
+    "tagsMgr.title": "标签管理",
+    "toast.assetDuplication.title": "发现存在重复的图片",
     "toast.err.title": "错误",
-    "toast.success.title": "成功",
-    "toast.invalidKeyComb.title": "无效的按键组合",
-    "toast.invalidKeyComb.body": "组合中至少应该存在一个不是 Ctrl, Shift 或者 Alt 的按键",
-    "toast.save.success": "已保存",
     "toast.export.success": "已导出",
-    "toast.assetDuplication.title": "发现存在重复的图片"
+    "toast.invalidKeyComb.body": "组合中至少应该存在一个不是 Ctrl, Shift 或者 Alt 的按键",
+    "toast.invalidKeyComb.title": "无效的按键组合",
+    "toast.save.success": "已保存",
+    "toast.success.title": "成功",
+    "update.body": "你正在使用 {{current}}, 最新版本是 {{latest}}",
+    "update.title": "有可用的更新"
 }
