--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -92,5 +92,6 @@
     "update.body": "You are now using {{current}}, while the latest is {{latest}}",
     "update.title": "Update Available",
     "quickRefCtxMenu.screenshot": "Screenshot",
-    "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it."
+    "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it.",
+    "ctxMenu.refresh": "Refresh"
 }
