feat: Double click behavior

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -48,6 +48,9 @@
     "settings.general.theme": "Theme",
     "settings.general.theme.dark": "Dark",
     "settings.general.theme.light": "Light",
+    "settings.general.dbClick": "Double Click Behavior",
+    "settings.general.dbClick.open": "Open File",
+    "settings.general.dbClick.ref": "Quick Ref",
     "settings.keyMapping": "Key Mapping",
     "settings.keyMapping.delete": "Delete",
     "settings.keyMapping.listening": "Listening",
