feat: Display more properties in detailed info.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,6 +37,13 @@
     "detail.size": "Size",
     "detail.src": "Source",
     "detail.tags": "Tags",
+    "detail.width": "Width",
+    "detail.height": "Height",
+    "detail.aspect": "Aspect Ratio",
+    "detail.min": "Boundary Minimum",
+    "detail.max": "Boundary Maximum",
+    "detail.vertices": "Vertices",
+    "detail.triangles": "Triangles",
     "quickRefCtxMenu.close": "Close",
     "recycleBin.title": "Recycle Bin",
     "settings.experimental": "Experimental",
