feat: About page.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -70,6 +70,10 @@
     "settings.library.statistics": "Statistics",
     "settings.modelRendering": "Model Rendering",
     "settings.modelRendering.fps": "Frame Rate",
+    "settings.about": "About",
+    "settings.about.updateCheck": "Check for Update",
+    "settings.about.repo": "Repository",
+    "settings.about.ver": "Version",
     "settings.title": "Settings",
     "startup.btnInitLib": "Initialize Library",
     "startup.btnOpenLib": "Open Library",
@@ -101,7 +105,9 @@
     "toast.save.success": "Saved library.",
     "toast.success.title": "Success",
     "update.body": "You are now using {{current}}, while the latest is {{latest}}",
+    "update.body.already": "You are using the latest version of Snowflake! 🥳",
     "update.title": "Update Available",
+    "update.title.already": "You are up to date",
     "quickRefCtxMenu.screenshot": "Screenshot",
     "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it.",
     "ctxMenu.refresh": "Refresh"
